<resources>
    <string name="app_name">Stocks-App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="box_SMA">SMA</string>
    <string name="box_EMA">EMA</string>
    <string name="box_MACD">MACD</string>
    <string name="box_AVGMACD">AVGMACD</string>
    <string name="btn_Search">Search</string>
    <string name="text_symbol">Ticker:</string>
    <string name="start_Date">Start Date:</string>
    <string name="End_Date">End Date:</string>
</resources>